dev: Add tags for Swagger docs.
